--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,25 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: grid;
+  height: 90vh;
+  place-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  /* font-size: 20px; */
+  font-weight: bold;
+}
+
+button {
+  background-color: black;
   color: white;
+  padding: 10px;
+  box-shadow: 0px 0px 0px #888;
+  border-radius: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.gameOver {
+  background-color: var(--xRed);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.buttonR > * {
+  margin: 2px;
 }
